--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <header id="header">
                 <div id="site-title">
                     <a href="./index.html">
-                        <h1> MY STARTPAGE</h1>
+                        <h1>STARTPAGE</h1>
                     </a>
                 </div>
                 <nav id="navbar">
@@ -39,8 +39,8 @@
 
             <section id="content">
                     <img src="images/tux.svg" alt="Tux" />
-                    <h3>WHATs MY NAME</h3>
-                    <h4>Personal startpage</h4>
+                    <h3>Lazar Zivadinovic</h3>
+                    <h4>$ cat /dev/urandom &gt; /dev/fb0</h4>
             </section>
 
             <section id="footer">
