--- a/startpage.html
+++ b/startpage.html
@@ -6,7 +6,7 @@
         <meta title="Lazar Zivadinovic 42/19" name="author"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="css/style.css" />  
-        <link rel="stylesheet" type="text/css" href="css/style-startpage.css" />  
+        <link rel="stylesheet" type="text/css" href="css/style-apps.css" />  
         <link rel="stylesheet" type="text/css" href="css/media-queries.css" />  
         <link rel="shortcut icon" href="favicon.ico"/>
     </head>
@@ -38,7 +38,17 @@
             </header>
 
             <section id="content">
-                 OVDE IDE CONTENT
+                 <ul>
+                     <li><a href="https://reddit.com" alt="reddit"><img src="./images/apps/reddit.png" alt="reddit"></a></li>
+                     <li><a href="https://news.ycombinator.com/" alt="HN"><img src="./images/apps/hackernews.jpg" alt="HN"></a></li>
+                     <li><a href="https://www.phoronix.com" alt="phoronix"><img src="./images/apps/phoronix.png" alt="phoronix"></a></li>
+                     <li><a href="https://owncloud.titan.aob.rs" alt="nextcloud"><img src="./images/apps/nc.png" alt="nextcloud"></a></li>
+                     <li><a href="https://harvard.voxcharta.org/category/astro-ph/solar-stellar-astro-ph/" alt="vox-charta"><img src="./images/apps/voxch.png" alt="voxch"></a></li>
+                     <li><a href="https://nikolavitas.blogspot.com/" alt="vitas"><img src="./images/apps/nv.jpg" alt="vitas"></a></li>
+                     <li><a href="http://hmi.stanford.edu/hminuggets/" alt="hmi"><img src="./images/apps/hmi.jpg" alt="hmi"></a></li>
+                     <li><a href="https://astrobites.org/" alt="astrobites"><img src="./images/apps/astrobites.png" alt="astrobites"></a></li>
+                     <li><a href="http://beneathdata.com/" alt="beneath-data"><img src="./images/apps/beneathdata.png" alt="beneathdata    "></a></li>
+                 </ul>
             </section>
 
             <section id="footer">
