--- a/startpage.html
+++ b/startpage.html
@@ -15,7 +15,8 @@
             <header id="header">
                 <div id="site-title">
                     <a href="./index.html">
-                        <h1> MY STARTPAGE</h1>
+                        <h1>Reverse-engineer? </h1> 
+                        <h4>I can barely forward-engineer!</h4>
                     </a>
                 </div>
                 <nav id="navbar">
@@ -23,7 +24,7 @@
                         <li><a href="https://github.com/lzivadinovic">
                             <h2>Github</h2></a>
                         </li>
-                        <li><a href="https://lzivadinovic.com">
+                        <li><a href="./blog.html">
                             <h2>Blog</h2></a>
                         </li>
                         <li><a href="./startpage.html">
