Fix responsive; Add alt tags and target for links

--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@
         <meta title="Lazar Zivadinovic 42/19" name="author"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="css/style.css" />  
-        <link rel="stylesheet" type="text/css" href="css/style-blog.css" />  
+        <!-- <link rel="stylesheet" type="text/css" href="css/style-blog.css" />   -->
         <link rel="stylesheet" type="text/css" href="css/media-queries.css" />  
         <link rel="shortcut icon" href="favicon.ico"/>
     </head>
@@ -38,7 +38,7 @@
                 </nav>
             </header>
 
-            <section id="content">
+            <section id="blog-posts">
                 <ul>
                     <li><a href="./articles/psf.html">
                         <h3>Korekcija usled point spread funkcije teleskopa</h3>
