--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
         <title>Startpage</title>
         <meta charset="utf-8"/>
         <meta title="Lazar Zivadinovic 42/19" name="author"/>
+        <!-- Ovo mi treba za responsive  -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="css/style.css" />  
-        <link rel="stylesheet" type="text/css" href="css/style-index.css" />  
+        <!-- <link rel="stylesheet" type="text/css" href="css/style-index.css" />   -->
         <link rel="stylesheet" type="text/css" href="css/media-queries.css" />  
         <link rel="shortcut icon" href="favicon.ico"/>
     </head>
@@ -38,10 +39,10 @@
                 </nav>
             </header>
 
-            <section id="content">
+            <section id="index-pane">
                     <img src="images/tux.svg" alt="Tux" />
                     <h3>Lazar Zivadinovic</h3>
-                    <h4>$ cat /dev/urandom &gt; /dev/fb0</h4>
+                    <h4>$ cat /dev/urandom &gt; /dev/fb0 <div class="blinking"></div></h4>
             </section>
 
             <section id="footer">
