--- a/startpage.html
+++ b/startpage.html
@@ -6,7 +6,7 @@
         <meta title="Lazar Zivadinovic 42/19" name="author"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="css/style.css" />  
-        <link rel="stylesheet" type="text/css" href="css/style-apps.css" />  
+        <!-- <link rel="stylesheet" type="text/css" href="css/style-apps.css" />   -->
         <link rel="stylesheet" type="text/css" href="css/media-queries.css" />  
         <link rel="shortcut icon" href="favicon.ico"/>
     </head>
@@ -38,7 +38,7 @@
                 </nav>
             </header>
 
-            <section id="content">
+            <section id="apps">
                  <ul>
                      <li><a href="https://reddit.com" alt="reddit"><img src="./images/apps/reddit.png" alt="reddit"></a></li>
                      <li><a href="https://news.ycombinator.com/" alt="HN"><img src="./images/apps/hackernews.jpg" alt="HN"></a></li>
@@ -48,7 +48,8 @@
                      <li><a href="https://nikolavitas.blogspot.com/" alt="vitas"><img src="./images/apps/nv.jpg" alt="vitas"></a></li>
                      <li><a href="http://hmi.stanford.edu/hminuggets/" alt="hmi"><img src="./images/apps/hmi.jpg" alt="hmi"></a></li>
                      <li><a href="https://astrobites.org/" alt="astrobites"><img src="./images/apps/astrobites.png" alt="astrobites"></a></li>
-                     <li><a href="http://beneathdata.com/" alt="beneath-data"><img src="./images/apps/beneathdata.png" alt="beneathdata    "></a></li>
+                     <li><a href="http://beneathdata.com/" alt="beneath-data"><img src="./images/apps/beneathdata.png" alt="beneathdata"></a></li>
+                     <li><a href="https://orbitalindex.com/" alt="orbitalindex"><img src="./images/apps/orbital.png" alt="orbitalindex"></a></li>
                  </ul>
             </section>
 
