--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <section id="index-pane">
                     <img src="images/tux.svg" alt="Tux" />
                     <h3>Lazar Zivadinovic</h3>
-                    <h4>$ cat /dev/urandom &gt; /dev/fb0 <div class="blinking"></div></h4>
+                    <h4>$ cat /dev/urandom &gt; /dev/fb0 <div class="blink"></div></h4>
             </section>
 
             <section id="footer">
