Add rss, linkedin and fix footer

--- a/blog.html
+++ b/blog.html
@@ -46,7 +46,7 @@
                         <p>PSF (point spread function) nam govori o nepravilnostima u optičkom sistemu. Optički savršen sistem ima neki difrakcioni limit i strukture koje su manje od toga ne može da razluči. Naravno, ni jedan sistem nije optički savršen tako da dolazi do raznih aberacija unutar samog sistema koje utiču na kvalitet slike. PSF nam govori o tim aberacijama. U principu, nemoguće je odrediti PSF teleskopa ali je moguće "nagađati" tu funkciju i zatim redukovati snimke metodom dekonvolucije.</p>
                     </li>
                     <li><a href="./articles/spektro.html">
-                        <h3>Clanak o spektroskopski dvojnim zvezdama</h3>
+                        <h3>Članak o spektroskopski dvojnim zvezdama</h3>
                         </a>
                         <p>Pre nego što krenem da postujem informacije o progresu, želim da izjavim da je ovo vežba najgora vežba koju smo imali na ovom predmetu. Zanimljiva problematika svakako, ali neizvodljiva vežba sa stanovišta preciznosti i smislenosti postupka sa ovako malim brojem merenja.</p>
                     </li>
@@ -55,9 +55,10 @@
 
             <section id="footer">
                     <ul>
-                        <li><a href="mailto:mail@lzivadinovic.com"><img src="./images/footer/email.svg" alt="asd"></a></li>
-                        <li><a href="dsa"><img src="./images/footer/sitemap.svg" alt="ds"></a></li>
-                        <li><a href="dsa"><img src="./images/footer/rss.svg" alt="s"> </a></li>
+                        <li><a href="mailto:mail@lzivadinovic.com"><img src="./images/footer/email.svg" alt="email"></a></li>
+                        <li><a href="https://www.linkedin.com/in/lazar-zivadinovic-8a6437161/" target="_blank"><img src="./images/footer/linkedin.svg" alt="LinkedIn"> </a></li>
+                        <li><a href="./sitemap.xml" target="_blank"><img src="./images/footer/sitemap.svg" alt="Sitemap"></a></li>
+                        <li><a href="./rss.xml" target="_blank"><img src="./images/footer/rss.svg" alt="RSS"> </a></li>                        
                     </ul>
             </section>
         </div>
