--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <title>Startpage</title>
         <meta charset="utf-8"/>
         <meta title="Lazar Zivadinovic 42/19" name="author"/>
+        <meta name="description" content="This is simple startpage i use at home" />
+        <link rel="canonical" href="http://webdizajn-lazar.lzivadinovic.com/" />
         <!-- Ovo mi treba za responsive  -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="css/style.css" />  
@@ -47,9 +49,10 @@
 
             <section id="footer">
                     <ul>
-                        <li><a href="mailto:mail@lzivadinovic.com"><img src="./images/footer/email.svg" alt="asd"></a></li>
-                        <li><a href="dsa"><img src="./images/footer/sitemap.svg" alt="ds"></a></li>
-                        <li><a href="dsa"><img src="./images/footer/rss.svg" alt="s"> </a></li>
+                        <li><a href="mailto:mail@lzivadinovic.com"><img src="./images/footer/email.svg" alt="email"></a></li>
+                        <li><a href="https://www.linkedin.com/in/lazar-zivadinovic-8a6437161/" target="_blank"><img src="./images/footer/linkedin.svg" alt="LinkedIn"> </a></li>
+                        <li><a href="./sitemap.xml" target="_blank"><img src="./images/footer/sitemap.svg" alt="Sitemap"></a></li>
+                        <li><a href="./rss.xml" target="_blank"><img src="./images/footer/rss.svg" alt="RSS"> </a></li>
                     </ul>
             </section>
         </div>
