--- a/startpage.html
+++ b/startpage.html
@@ -55,9 +55,10 @@
 
             <section id="footer">
                     <ul>
-                        <li><a href="mailto:mail@lzivadinovic.com"><img src="./images/footer/email.svg" alt="asd"></a></li>
-                        <li><a href="dsa"><img src="./images/footer/sitemap.svg" alt="ds"></a></li>
-                        <li><a href="dsa"><img src="./images/footer/rss.svg" alt="s"> </a></li>
+                        <li><a href="mailto:mail@lzivadinovic.com"><img src="./images/footer/email.svg" alt="email"></a></li>
+                        <li><a href="https://www.linkedin.com/in/lazar-zivadinovic-8a6437161/" target="_blank"><img src="./images/footer/linkedin.svg" alt="LinkedIn"> </a></li>
+                        <li><a href="./sitemap.xml" target="_blank"><img src="./images/footer/sitemap.svg" alt="Sitemap"></a></li>
+                        <li><a href="./rss.xml" target="_blank"><img src="./images/footer/rss.svg" alt="RSS"> </a></li>
                     </ul>
             </section>
         </div>
