--- a/about.html
+++ b/about.html
@@ -46,6 +46,7 @@
                 <p>Skoro tri godine radim u firmi ITekako kao devops inženjer. Zaduženja su mi automatizacija deploy procedura, beckup sistema, postavljanje skalabilnih sistema (gde je to moguće), monitoring, održavanje servera i mreže. Takođe sam razvijao PoC api-je za neke projekte. Volim da se igram sa hardverom. Od programskih jezika znam python (flask, numpy, scipy, matplotlib, astropy i učim trenutno tensorflow), IDL (solarsoft), bash scripting. Koristim linux (btw i DONT use arch), a kući se igram sa OpenBSD.</p>
                 <p>U principu, pregoreo sam na astrofizici i treba mi malo da odmorim, ako se nekada predomislim, završiću astrofiziku. ICT sam upisao da bih imao diplomu sa kojom bih mogao da konkurišem kao IT staff na institutima za solarnu astrofiziku. Želim da pravim automatske procedure za obradu podataka sa teleskopa. Uskoro stiže DKIST i EST i voleo bih da radim na tim teleskopima.</p>
                 <p>Moj CV možete preuzeti <a href="./images/cv.pdf" target="_blank">ovde</a>.</p>
+                <p>P.S. Deploy procedura za ovaj sajt je bukvalno git pull u crontabu sa <a href="https://github.com/lzivadinovic/wd1" target="_blank">ovog repoa</a>.</p>
             </section>
 
             <section id="footer">
