--- a/blog.html
+++ b/blog.html
@@ -7,6 +7,7 @@
         <meta name="description" content="This is simple startpage i use at home" />
         <link rel="canonical" href="http://webdizajn-lazar.lzivadinovic.com/" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="keywords" content="startpage, personal blog, solar astrophysics">
         <link rel="stylesheet" type="text/css" href="css/style.css" />  
         <!-- <link rel="stylesheet" type="text/css" href="css/style-blog.css" />   -->
         <link rel="stylesheet" type="text/css" href="css/media-queries.css" />  
