--- a/startpage.html
+++ b/startpage.html
@@ -6,6 +6,7 @@
         <meta title="Lazar Zivadinovic 42/19" name="author"/>
         <meta name="description" content="This is simple startpage i use at home" />
         <link rel="canonical" href="http://webdizajn-lazar.lzivadinovic.com/" />
+		<meta name="keywords" content="startpage, personal blog, solar astrophysics">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="css/style.css" />  
         <!-- <link rel="stylesheet" type="text/css" href="css/style-apps.css" />   -->
