Forgot to push new article, fix css; Update domains

--- a/blog.html
+++ b/blog.html
@@ -43,6 +43,11 @@
 
             <section id="blog-posts">
                 <ul>
+                    <li><a href="./articles/wd_rss.html">
+                        <h3>RSS feed na sajtu webdizajn.ict.edu.rs</h3>
+                        </a>
+                        <p>RSS je super tehnologija. RSS agregatori koji su ugradjeni u browser su užasna implementacija odlične ideje. Zaključan rss feed samo nije kul.</p>
+                    </li>
                     <li><a href="./articles/psf.html">
                         <h3>Korekcija usled point spread funkcije teleskopa</h3>
                         </a>
