--- a/startpage.html
+++ b/startpage.html
@@ -46,7 +46,7 @@
                      <li><a href="https://reddit.com" alt="reddit"><img src="./images/apps/reddit.png" alt="reddit"></a></li>
                      <li><a href="https://news.ycombinator.com/" alt="HN"><img src="./images/apps/hackernews.jpg" alt="HN"></a></li>
                      <li><a href="https://www.phoronix.com" alt="phoronix"><img src="./images/apps/phoronix.png" alt="phoronix"></a></li>
-                     <li><a href="https://owncloud.titan.aob.rs" alt="nextcloud"><img src="./images/apps/nc.png" alt="nextcloud"></a></li>
+                     <li><a href="https://nextcloud.lzivadinovic.com" alt="nextcloud"><img src="./images/apps/nc.png" alt="nextcloud"></a></li>
                      <li><a href="https://harvard.voxcharta.org/category/astro-ph/solar-stellar-astro-ph/" alt="vox-charta"><img src="./images/apps/voxch.png" alt="voxch"></a></li>
                      <li><a href="https://nikolavitas.blogspot.com/" alt="vitas"><img src="./images/apps/nv.jpg" alt="vitas"></a></li>
                      <li><a href="http://hmi.stanford.edu/hminuggets/" alt="hmi"><img src="./images/apps/hmi.jpg" alt="hmi"></a></li>
