--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8"/>
         <meta title="Lazar Zivadinovic 42/19" name="author"/>
         <meta name="description" content="This is simple startpage i use at home" />
-        <link rel="canonical" href="http://webdizajn-lazar.lzivadinovic.com/" />
+        <link rel="canonical" href="http://wd.lzivadinovic.com/" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="keywords" content="startpage, personal blog, solar astrophysics">
         <link rel="stylesheet" type="text/css" href="css/style.css" />  
